--- a/app_one/views/base_menu.xml
+++ b/app_one/views/base_menu.xml
@@ -10,5 +10,10 @@
         name="Properties"
         parent="real_estate_root_menu"
     />
+    <menuitem
+        id="configration_menu"
+        name="Configration"
+        parent="real_estate_root_menu"
+    />
 
 </odoo>
