--- a/app_one/views/property_view.xml
+++ b/app_one/views/property_view.xml
@@ -7,12 +7,14 @@
             <tree>
                 <field name="name"/>
                 <field name="postcode"/>
+                <field name="owner_id"/>
                 <field name="date_availability"/>
                 <field name="selling_price"/>
                 <field name="garden"/>
                 <field name="facades"/>
                 <field name="garage" optional="1"/>
                 <field name="garden_area" optional="1"/>
+
             </tree>
         </field>
     </record>
@@ -40,11 +42,13 @@
 
                         </group>
                         <group string="Additional Info.">
+                             <field name="owner_id"/>
                              <field name="garden"/>
                              <field name="facades"/>
                              <field name="garage"/>
                              <field name="living_area"/>
                              <field name="garden_orientation"/>
+
 
                         </group>
 
