--- a/app_one/views/owner_view.xml
+++ b/app_one/views/owner_view.xml
@@ -31,6 +31,9 @@
                             <field name="address"/>
 
                         </group>
+                        <group>
+                            <field name="property_ids"/>
+                        </group>
                     </group>
                 </sheet>
             </form>
