--- a/app_one/views/owner_view.xml
+++ b/app_one/views/owner_view.xml
@@ -32,7 +32,7 @@
 
                         </group>
                         <group>
-                            <field name="property_ids"/>
+                            <field name="property_ids" widget="many2many_tags"/>
                         </group>
                     </group>
                 </sheet>
