--- a/app_one/views/property_view.xml
+++ b/app_one/views/property_view.xml
@@ -48,6 +48,7 @@
                              <field name="garage"/>
                              <field name="living_area"/>
                              <field name="garden_orientation"/>
+                             <field name="tag_ids" widget="many2many_tags"/>
 
 
                         </group>
