--- a/app_one/views/property_view.xml
+++ b/app_one/views/property_view.xml
@@ -10,6 +10,7 @@
                 <field name="owner_id"/>
                 <field name="date_availability"/>
                 <field name="selling_price"/>
+                <field name="state"/>
                 <field name="garden"/>
                 <field name="facades"/>
                 <field name="garage" optional="1"/>
@@ -24,6 +25,10 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <header>
+                        <field name="state" widget="statusbar"/>
+                        
+                    </header>
                     <div class="oe_title">
                         <label for="name"/>
                         <h1>
