--- a/app_one/views/property_view.xml
+++ b/app_one/views/property_view.xml
@@ -26,9 +26,14 @@
             <form>
                 <sheet>
                     <header>
-                        <button name="action_draft" type="object" class="btn-primary" string="Set To Draft"/>
+                        <button name="action_draft" type="object" class="btn-primary" string="Set To Draft"
+                                invisible="state=='draft'"/>
+                        <button name="action_pending" type="object" class="btn-secondary" string="Set To Pending"
+                                invisible="state !='draft'"/>
+                        <button name="action_sold" type="object" class="btn-success" string="Set To Sold"
+                                invisible="state!='pending'"/>
                         <field name="state" widget="statusbar"/>
-                        
+
                     </header>
                     <div class="oe_title">
                         <label for="name"/>
@@ -40,11 +45,13 @@
                     <group>
                         <group string="General Info.">
                              <field name="date_availability" required="1"/>
+                             <field name="expected_price"/>
                              <field name="selling_price"/>
+                             <field name="diff"/>
                              <field name="postcode"/>
                              <field name="bedrooms"/>
                              <field name="garden_area"/>
-                             <field name="expected_price"/>
+
 
                         </group>
                         <group string="Additional Info.">
