--- a/app_one/views/property_view.xml
+++ b/app_one/views/property_view.xml
@@ -4,7 +4,7 @@
         <field name="name">property tree</field>
         <field name="model">property</field>
         <field name="arch" type="xml">
-            <tree>
+            <tree class="header_custom">
                 <field name="name"/>
                 <field name="postcode"/>
                 <field name="owner_id"/>
