--- a/app_one/views/property_view.xml
+++ b/app_one/views/property_view.xml
@@ -56,6 +56,8 @@
                         </group>
                         <group string="Additional Info.">
                              <field name="owner_id"/>
+                             <field name="owner_address"/>
+                             <field name="owner_phone"/>
                              <field name="garden"/>
                              <field name="facades"/>
                              <field name="garage"/>
