--- a/app_one/views/building_view.xml
+++ b/app_one/views/building_view.xml
@@ -5,6 +5,11 @@
         <field name="model">building</field>
         <field name="arch" type="xml">
             <tree class="header_custom">
+                <field name="name"/>
+                <field name="no"/>
+                <field name="code"/>
+                <field name="description"/>
+                <field name="active"/>
 
             </tree>
         </field>
@@ -15,65 +20,20 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
-                    <header>
-                        <button name="action_draft" type="object" class="btn-primary" string="Set To Draft"
-                                invisible="state=='draft'"/>
-                        <button name="action_pending" type="object" class="btn-secondary" string="Set To Pending"
-                                invisible="state !='draft'"/>
-                        <button name="action_sold" type="object" class="btn-success" string="Set To Sold"
-                                invisible="state!='pending'"/>
-                        <field name="state" widget="statusbar"/>
 
-                    </header>
-                    <div class="oe_title">
-                        <label for="name"/>
-                        <h1>
-                            <field name="name"/>
-                        </h1>
-
-                    </div>
                     <group>
                         <group string="General Info.">
-                             <field name="date_availability" required="1"/>
-                             <field name="expected_price"/>
-                             <field name="selling_price"/>
-                             <field name="diff"/>
-                             <field name="postcode"/>
-                             <field name="bedrooms"/>
-                             <field name="garden_area"/>
-
-
+                            <field name="name"/>
+                            <field name="no"/>
                         </group>
                         <group string="Additional Info.">
-                             <field name="owner_id"/>
-                             <field name="owner_address"/>
-                             <field name="owner_phone"/>
-                             <field name="garden"/>
-                             <field name="facades"/>
-                             <field name="garage"/>
-                             <field name="living_area"/>
-                             <field name="garden_orientation"/>
-                             <field name="tag_ids" widget="many2many_tags"/>
-
-
+                            <field name="code"/>
+                            <field name="active"/>
                         </group>
                     </group>
-                        <group>
-                              <field name="description" required="1"/>
-                        </group>
-
-                        <notebook>
-                            <page string="Bedrooms">
-                                <field name="line_ids">
-                                    <tree editable="bottom">
-                                         <field name="description"/>
-                                         <field name="area"/>
-                                    </tree>
-                                </field>
-
-                            </page>
-                        </notebook>
-
+                    <group>
+                        <field name="description"/>
+                    </group>
                 </sheet>
                 <div class="oe_chatter">
                     <field name="message_follower_ids"/>
@@ -91,26 +51,21 @@
         <field name="arch" type="xml">
             <search>
                 <field name="name"/>
-                <field name="postcode"/>
-
-                <filter name="is_garden" string="With Garden" domain="[('garden','=',True)]" />
-                <filter name="is_not_garden" string="Without Garden" domain="[('garden','=',False)]" />
-                <filter name="is_garage" string="With Garage" domain="[('garage','=',True)]" />
-
-                <filter name="garden" string="Garden" context="{'group_by':'garden'}" />
+                <field name="no"/>
+                <field name="code"/>
             </search>
         </field>
     </record>
 
     <record id="building_action" model="ir.actions.act_window">
-        <field name="name">building</field>
+        <field name="name">Building</field>
         <field name="res_model">building</field>
         <field name="view_mode">tree,form</field>
     </record>
 
     <menuitem
         id="building_menu_item"
-        name="Properties"
+        name="Buildings"
         parent="properties_menu"
         action="building_action"
     />
