--- a/app_one/views/property_view.xml
+++ b/app_one/views/property_view.xml
@@ -13,6 +13,7 @@
                 <field name="state"/>
                 <field name="garden"/>
                 <field name="facades"/>
+                <field name="active"/>
                 <field name="garage" optional="1"/>
                 <field name="garden_area" optional="1"/>
 
@@ -63,6 +64,7 @@
                              <field name="garage"/>
                              <field name="living_area"/>
                              <field name="garden_orientation"/>
+                             <field name="active"/>
                              <field name="tag_ids" widget="many2many_tags"/>
 
 
