Adding Closed Server Actions

--- a/app_one/views/property_view.xml
+++ b/app_one/views/property_view.xml
@@ -120,6 +120,16 @@
         <field name="view_mode">tree,form</field>
     </record>
 
+    <record id="property_closed_server_action" model="ir.actions.server">
+        <field name="name">Closed</field>
+        <field name="model_id" ref="model_property"/>
+        <field name="binding_model_id" ref="model_property"/>
+        <field name="state">code</field>
+        <field name="code">
+            action = records.action_closed()
+        </field>
+    </record>
+
     <menuitem
         id="property_menu_item"
         name="Properties"
