Adding Automated actions cron

--- a/app_one/views/property_view.xml
+++ b/app_one/views/property_view.xml
@@ -4,9 +4,10 @@
         <field name="name">property tree</field>
         <field name="model">property</field>
         <field name="arch" type="xml">
-            <tree class="header_custom">
+            <tree class="header_custom" decoration-danger="(is_late)">
                 <field name="name"/>
                 <field name="postcode"/>
+                <field name="is_late" invisible="1"/>
                 <field name="owner_id"/>
                 <field name="date_availability"/>
                 <field name="selling_price"/>
@@ -46,6 +47,8 @@
                     <group>
                         <group string="General Info.">
                              <field name="date_availability" required="1"/>
+                             <field name="expected_selling_date"/>
+                             <field name="is_late" invisible="1"/>
                              <field name="expected_price"/>
                              <field name="selling_price"/>
                              <field name="diff"/>
@@ -128,6 +131,18 @@
         <field name="code">
             action = records.action_closed()
         </field>
+    </record>
+
+    <record id="check_selling_date_cron" model="ir.cron">
+        <field name="name">Property: Check selling date</field>
+        <field name="model_id" ref="model_property"/>
+        <field name="state">code</field>
+        <field name="code">model.check_expected_selling_date()</field>
+        <field name="interval_number">1</field>
+        <field name="interval_type">days</field>
+        <field name="numbercall">-1</field>
+        <field name="active">True</field>
+
     </record>
 
     <menuitem
