--- a/app_one/views/property_view.xml
+++ b/app_one/views/property_view.xml
@@ -28,6 +28,7 @@
             <form>
                 <sheet>
                     <header>
+                        <button name="action" type="object" class="btn-primary" string="Action"/>
                         <button name="action_draft" type="object" class="btn-primary" string="Set To Draft"
                                 invisible="state=='draft'"/>
                         <button name="action_pending" type="object" class="btn-secondary" string="Set To Pending"
@@ -38,10 +39,15 @@
 
                     </header>
                     <div class="oe_title">
-                        <label for="name"/>
+                        <label for="ref"/>
                         <h1>
-                            <field name="name"/>
+                            <field name="ref"/>
                         </h1>
+
+                        <label for="name"/>
+                        <h3>
+                            <field name="name"/>
+                        </h3>
 
                     </div>
                     <group>
