add permission using groups

--- a/app_one/views/base_menu.xml
+++ b/app_one/views/base_menu.xml
@@ -15,6 +15,7 @@
         id="configration_menu"
         name="Configration"
         parent="real_estate_root_menu"
+        groups="app_one.property_manager_group"
     />
 
 </odoo>
