--- a/app_one/views/property_history_view.xml
+++ b/app_one/views/property_history_view.xml
@@ -55,6 +55,7 @@
         name="History"
         parent="properties_menu"
         action="property_history_action"
+        groups="app_one.property_manager_group"
     />
 
 </odoo>
