--- a/iti_course/views/iti_student_views.xml
+++ b/iti_course/views/iti_student_views.xml
@@ -21,6 +21,12 @@
             <field name="arch" type="xml">
                 <form>
                     <sheet>
+                        <header>
+                            <button string="Set first interview" type="object" name="set_first_action" invisible="state !='applied'"/>
+                            <button string="Set second interview" type="object" name="set_second_action" invisible="state !='first'"/>
+                            <button string="Passed" type="object" name="set_passed_action" invisible="state !='second'"/>
+                            <button string="Rejected" type="object" name="set_rejected_action" invisible="state in ('passed','rejected')"/>
+                        </header>
                         <div class="oe_title">
                             <label for="name"/>
                             <h1>
@@ -30,8 +36,10 @@
 
                         <group>
                             <group string="General Info.">
+                                <field name="email"/>
                                 <field name="gender"/>
                                 <field name="salary"/>
+                                <field name="state"/>
                                 <field name="birth_date"/>
                                 <field name="age"/>
                                 <field name="address"/>
