Add constraint to make Tax ID mandatory for CRM customers

--- a/hms/views/hospital_patient_views.xml
+++ b/hms/views/hospital_patient_views.xml
@@ -26,6 +26,7 @@
                         <group string="General Info.">
                             <field name="first_name"/>
                             <field name="last_name"/>
+                            <field name="email"/>
                             <field name="address"/>
                             <field name="age"/>
                             <field name="department_id"/>
