--- a/hms/views/hospital_patient_views.xml
+++ b/hms/views/hospital_patient_views.xml
@@ -32,7 +32,7 @@
                             <field name="department_id"/>
                             <field name="department_capacity"/>
                             <field name="doctor_ids" widget="many2many_tags"/>
-                            <field name="state"/>
+                            <field name="state" />
                         </group>
 
                             <group string="Additional Info.">
@@ -41,7 +41,8 @@
                                 <field name="cr_ratio"/>
                                 <field name="blood_type"/>
                                 <field name="pcr"/>
-                                <field name="image"/>
+                                <field name="image" widget="image"/>
+
 
                             </group>
                         </group>
