--- a/app_one/views/property_view.xml
+++ b/app_one/views/property_view.xml
@@ -27,6 +27,12 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <div name="button_box" class="oe_button_box">
+                        <button name="action_open_related_owner" type="object" icon="fa-user"
+                                string="Owner" invisible="not owner_id"/>
+                    </div>
+                    <widget name="web_ribbon" title="Archived" bg_color="text-bg-danger" invisible="active"/>
+                    <widget name="web_ribbon" title="Sold" bg_color="text-bg-success" invisible="state !='sold'"/>
                     <header>
                         <button name="action" type="object" class="btn-primary" string="Action"/>
                         <button name="action_draft" type="object" class="btn-primary" string="Set To Draft"
