--- a/task_two/views/task_management_view.xml
+++ b/task_two/views/task_management_view.xml
@@ -8,8 +8,8 @@
                     <field name="seq_number"/>
                     <field name="date"/>
                     <field name="employee"/>
-                    <field name="state"/>
-                    <field name="deadline"/>
+                    <field name="state" widget="badge" decoration-success="state == 'done'" decoration-warning="state == 'in_progress'" decoration-info="state == 'draft'"/>
+                    <field name="deadline" widget="badge" decoration-danger="deadline &lt; current_date"/>
                 </tree>
             </field>
         </record>
