Add Smart Button Task Two IET

--- a/task_two/views/employee_number_view.xml
+++ b/task_two/views/employee_number_view.xml
@@ -4,6 +4,12 @@
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="arch" type="xml">
+            <xpath expr="//form/header" position="inside">
+                <div name="button_box" class="oe_button_box">
+                    <button name="action_open_related_task" type="object"
+                            string="Related Tasks" icon="fa-tasks"/>
+                </div>
+            </xpath>
             <xpath expr="//field[@name='mobile_phone']" position="before">
                 <field name="employee_number"/>
 
