--- a/task_two/views/user_tasks_view.xml
+++ b/task_two/views/user_tasks_view.xml
@@ -4,19 +4,19 @@
         <field name="name">Task Management</field>
         <field name="res_model">task.management</field>
         <field name="view_mode">tree,form</field>
-        <field name="domain">[('assignees', 'in', [uid]), ('state', '=', 'in_progress')]</field>
+        <field name="domain">[('assignees', 'in', [uid])]</field>
+        <field name="context">{}</field>
+
     </record>
 
     <menuitem
-    id="menu_user_related_tasks"
-    name="User Related Tasks"
-    parent="hr.menu_config_employee"
-    action="user_task_management_action"
-    sequence="120"
-    groups="task_two.group_task_manager"
+            id="menu_user_related_tasks"
+            name="My Tasks"
+            parent="hr.menu_hr_employee_user"
+            action="user_task_management_action"
+            sequence="120"
+            groups="task_two.group_task_manager"
+    />
 
-/>
-
-
-     </data>
+</data>
 </odoo>
